# opinionated-django

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude-plugin/: plugin.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
example_project/: pyproject.toml  pytest.ini
example_project/.claude/skills/modern-django/: SKILL.md
example_project/.specify/memory/: constitution.md
example_project/src/project/: api.py  types.py
example_project/src/project/api/: __init__.py
example_project/src/project/api/orders/: routes.py  schemas.py
example_project/src/project/api/products/: routes.py  schemas.py
example_project/tests/orders/: test_api.py
op-django/commands/: lint.md
skills/architecture/: SKILL.md
skills/dj-api/: SKILL.md
skills/dj-architecture/: SKILL.md
skills/dj-auth/: SKILL.md
skills/dj-lint/: SKILL.md
skills/dj-models/: SKILL.md
skills/dj-prefixed-ulids/: SKILL.md
skills/dj-pytest/: SKILL.md
skills/dj-scaffold/: SKILL.md
skills/dj-services/: SKILL.md
skills/dj-settings/: SKILL.md
skills/dj-signals/: SKILL.md
skills/dj-tasks/: SKILL.md
skills/lint/: SKILL.md
skills/models/: SKILL.md
skills/prefixed-ulids/: SKILL.md
skills/pytest/: SKILL.md
skills/scaffold/: SKILL.md
skills/services/: SKILL.md
skills/settings/: SKILL.md
skills/signals/: SKILL.md
specs/001-setup-ecommerce/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-django-type-stubs/: data-model.md  plan.md  quickstart.md  (+3 more)
tests/: test_types.py
(+21 files in other folders)
